--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,71 @@
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+alembic==1.13.3
+annotated-types==0.7.0
+anyio==4.6.2.post1
+attrs==24.2.0
+blinker==1.8.2
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
+coloredlogs==15.0.1
+cryptography==43.0.3
+distro==1.9.0
+Flask==3.0.3
+Flask-JWT-Extended==4.6.0
+Flask-Migrate==4.0.7
+Flask-SQLAlchemy==3.1.1
+frozenlist==1.5.0
+h11==0.14.0
+httpcore==1.0.6
+httpx==0.27.2
+humanfriendly==10.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jiter==0.6.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.6
+langchain-core==0.3.14
+langchain-openai==0.2.4
+langchain-redis==0.1.1
+langchain-text-splitters==0.3.1
+langsmith==0.1.138
+Mako==1.3.6
+MarkupSafe==3.0.2
+ml-dtypes==0.4.1
+multidict==6.1.0
+numpy==1.26.4
+openai==1.53.0
+orjson==3.10.10
+packaging==24.1
+propcache==0.2.0
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
+PyJWT==2.9.0
+PyMySQL==1.1.1
+python-dotenv==1.0.1
+python-ulid==2.7.0
+PyYAML==6.0.2
+redis==5.2.0
+redisvl==0.3.5
+regex==2024.9.11
+requests==2.32.3
+requests-toolbelt==1.0.0
+sniffio==1.3.1
+SQLAlchemy==2.0.36
+tabulate==0.9.0
+tenacity==9.0.0
+tiktoken==0.8.0
+tqdm==4.66.6
+typing_extensions==4.12.2
+urllib3==2.2.3
+Werkzeug==3.0.6
+yarl==1.17.1
 Flask
 Flask-SQLAlchemy
 Flask-Migrate
