--- a/alembic.ini
+++ b/alembic.ini
@@ -59,7 +59,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql+pymysql://root:335276@localhost/trand_nv
+sqlalchemy.url = mysql+pymysql://junho:335276@13.209.230.95:3306/trand_nv
 
 # [post_write_hooks]
 # This section defines scripts or Python functions that are run
